Fixing stupid Mountain Lion silently failing issue (fixes #12)